# folderingbyimagecaptioning-fastapi-backend-restapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
src/: main.py
src/app/: cli.py
src/app/config/: settings.py
src/app/controllers/api/: ImageFolderController.py
src/app/ml_models/: v2_tokenizer.pkl  v3_tokenizer.pkl
src/app/models/: ImageModel.py
src/app/routes/: v1.py
src/app/services/: ImageCaptionService.py  ProgressTracker.py  ServiceFactory.py
